add more introduction card and app collections

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,6 @@ flutter:
     - assets/images/
 
   fonts:
-    - family: Montserrat
+    - family: OpenSans
       fonts:
-        - asset: assets/fonts/Montserrat.ttf
+        - asset: assets/fonts/OpenSans.ttf
